--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,10 @@ bleach==6.2.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
+cli_helpers==2.4.0
+click==8.2.1
 comm==0.2.2
+configobj==5.0.9
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
@@ -58,10 +61,14 @@ packaging==25.0
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
+pgcli==4.3.0
+pgspecial==2.2.1
 platformdirs==4.3.8
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
+psycopg==3.2.9
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py4j==0.10.9.9
@@ -78,16 +85,21 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.25.1
 Send2Trash==1.8.3
+setproctitle==1.3.6
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
+SQLAlchemy==2.0.41
+sqlparse==0.5.3
 stack-data==0.6.3
+tabulate==0.9.0
 terminado==0.18.1
 tinycss2==1.4.0
 tornado==6.5.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 typing_extensions==4.14.0
+tzlocal==5.3.1
 uri-template==1.3.0
 urllib3==2.4.0
 wcwidth==0.2.13
