Adding progess: Successfully build the image and ingesting data via Docker

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# .env
-POSTGRES_USER=dbadmin
-POSTGRES_PASSWORD=dbadminpw
-POSTGRES_HOST=pgdatabase
-POSTGRES_PORT=5432
-POSTGRES_DB=sqldatabase
+PG_USER=dbadmin
+PG_PASSWORD=dbadminpw
+PG_HOST=pgdatabase
+PG_PORT=5432
+PG_DB=sqldatabase
