--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,88 @@
-anyio==4.9.0
+aiohttp==3.9.3
+aiosignal==1.3.1
 appnope==0.1.4
-argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-cli_helpers==2.4.0
-click==8.2.1
+asttokens==2.4.1
+attrs==24.2.0
+Backtesting==0.3.3
+bokeh==3.5.2
+cli-helpers==2.3.0
 comm==0.2.2
-configobj==5.0.9
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-executing==2.2.0
-fastjsonschema==2.21.1
-findspark==2.0.1
-fqdn==1.5.1
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-ipykernel==6.29.5
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mistune==3.1.3
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
+configobj==5.0.8
+contourpy==1.2.0
+cycler==0.12.1
+dateparser==1.2.0
+debugpy==1.8.1
+decorator==5.1.1
+distlib==0.3.8
+executing==2.0.1
+filelock==3.13.1
+fonttools==4.46.0
+frozenlist==1.4.1
+h11==0.14.0
+ipykernel==6.29.3
+ipython==8.22.2
+jedi==0.19.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+multidict==6.0.5
 nest-asyncio==1.6.0
-notebook==7.4.3
-notebook_shim==0.2.4
-numpy==2.3.0
-overrides==7.7.0
-packaging==25.0
-pandocfilters==1.5.1
-parso==0.8.4
+numpy==2.1.1
+outcome==1.3.0.post0
+packaging==24.0
+pandas==2.1.3
+parso==0.8.3
+pendulum==3.0.0
 pexpect==4.9.0
-pgcli==4.3.0
-pgspecial==2.2.1
-platformdirs==4.3.8
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-psutil==7.0.0
-psycopg==3.2.9
-psycopg2-binary==2.9.10
+pgcli==4.0.1
+pgspecial==2.1.1
+Pillow==10.1.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+psycopg==3.1.15
+psycopg-binary==3.1.15
+psycopg-pool==3.2.0
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
-pure_eval==0.2.3
+pure-eval==0.2.2
 py4j==0.10.9.9
-pycparser==2.22
-Pygments==2.19.1
+pyarrow==14.0.1
+pycryptodome==3.20.0
+Pygments==2.17.2
+pyparsing==3.1.1
+PySocks==1.7.1
 pyspark==4.0.0
+python-binance==1.0.19
 python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-PyYAML==6.0.2
-pyzmq==27.0.0
-referencing==0.36.2
-requests==2.32.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.25.1
-Send2Trash==1.8.3
-setproctitle==1.3.6
-six==1.17.0
+pytz==2023.3.post1
+pyzmq==25.1.2
+regex==2023.12.25
+seaborn==0.13.0
+selenium==4.23.1
+setproctitle==1.3.3
+six==1.16.0
 sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.41
-sqlparse==0.5.3
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.23
+sqlparse==0.4.4
 stack-data==0.6.3
 tabulate==0.9.0
-terminado==0.18.1
-tinycss2==1.4.0
-tornado==6.5.1
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20250516
-typing_extensions==4.14.0
-tzlocal==5.3.1
-uri-template==1.3.0
-urllib3==2.4.0
+time-machine==2.13.0
+tornado==6.4
+traitlets==5.14.2
+trio==0.26.2
+trio-websocket==0.11.1
+tzdata==2023.3
+tzlocal==5.2
+ujson==5.9.0
+undetected-chromedriver==2.1.1
+virtualenv==20.25.1
 wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
 websocket-client==1.8.0
+websockets==12.0
+wsproto==1.2.0
+xyzservices==2024.6.0
+yarl==1.9.4
